# zephyrTemplateF4

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  boot.conf  disco_f4.overlay  disco_f4_boot.overlay  mykey.pem  prj.conf  stm32f4x.cfg
src/: main.c  ws.c
